Added email notification form for sending delayed notifications Added view Added form Added url Added celery.py updated requirements.txt updated email in core.settings

--- a/watches/templates/index.html
+++ b/watches/templates/index.html
@@ -8,7 +8,9 @@
 <body>
     {% block content %}
         <h1>Welcome your Watch Business Empire!</h1>
-        <!-- Additional content for the index page -->
+        <br><a href="{% url 'users:email-notification' %}">Send e-mail notification</a></br>
+        <br><a href="{% url 'triangle:calc-hypo' %}">Calculate hypotenuse</a></br>
+        <br><a href="{% url 'create-person' %}">Create person</a></br>
     {% endblock %}
 </body>
 </html>
