Added class-based views for watches app
creating, updating, deleting, watches with login required

updates tempaltes

--- a/watches/templates/index.html
+++ b/watches/templates/index.html
@@ -8,9 +8,12 @@
 <body>
     {% block content %}
         <h1>Welcome your Watch Business Empire!</h1>
-        <br><a href="{% url 'users:email-notification' %}">Send e-mail notification</a></br>
-        <br><a href="{% url 'triangle:calc-hypo' %}">Calculate hypotenuse</a></br>
-        <br><a href="{% url 'create-person' %}">Create person</a></br>
+        <ul class="index-list">
+            <li><a class="index-button" href="{% url 'users:email-notification' %}">Send e-mail notification</a></li>
+            <li><a class="index-button" href="{% url 'watches:create-watch' %}">Create watch</a></li>
+            <li><a class="index-button" href="{% url 'triangle:calc-hypo' %}">Calculate hypotenuse</a></li>
+            <li><a class="index-button" href="{% url 'create-person' %}">Create person</a></li>
+        </ul>
     {% endblock %}
 </body>
 </html>
