--- a/watches/templates/base.html
+++ b/watches/templates/base.html
@@ -4,17 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}Watch Business{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <link rel="stylesheet" href="{% static 'watches/css/styles.css' %}">
 </head>
 <body>
     <div class="container">
         <div class="sidebar">
-            <ul>
-                <li><a href="{% url 'watches:index' %}">Home</a></li>
-                <li><a href="{% url 'watches:designers' %}">All Designers</a></li>
-                <li><a href="{% url 'watches:brands' %}">All Brands</a></li>
-                <li><a href="{% url 'watches:watches' %}">All Watches</a></li>
-                <li><a href="{% url 'watches:stores' %}">All Stores</a></li>
+            <ul class="index-list">
+                <li><a class="index-button" href="{% url 'watches:index' %}">Home</a></li>
+                <li><a class="index-button" href="{% url 'watches:designers' %}">All Designers</a></li>
+                <li><a class="index-button" href="{% url 'watches:brands' %}">All Brands</a></li>
+                <li><a class="index-button" href="{% url 'watches:watches' %}">All Watches</a></li>
+                <li><a class="index-button" href="{% url 'watches:stores' %}">All Stores</a></li>
             </ul>
 
         </div>
