--- a/watches/templates/brand_list.html
+++ b/watches/templates/brand_list.html
@@ -4,7 +4,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title><title>{% block title %}All Brands{% endblock %}</title>
+    <title>{% block title %}All Brands{% endblock %}</title>
 </head>
 <body>
     {% block content %}
@@ -20,7 +20,7 @@
             </tr>
         </thead>
         <tbody>
-            {% for brand in brand_list %}
+            {% for brand in page_obj %}
                 <tr>
                     <td><a href="{% url 'watches:brand-detail' brand.pk %}">{{ brand.name }}</a></td>
                     <td>{{ brand.country }}</td>
@@ -31,6 +31,25 @@
     {% else %}
     <p>There are no brands.</p>
     {% endif %}
+
+    <br><div class="pagination">
+    <span class="step-links">
+        {% if page_obj.has_previous %}
+            <a href="?page=1">&laquo; first</a>
+            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+        {% endif %}
+
+        <span class="current">
+            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
+        </span>
+
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">next</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+        </span>
+    </div>
+
     {% endblock %}
 </body>
 </html>
