--- a/watches/templates/watch_list.html
+++ b/watches/templates/watch_list.html
@@ -1,16 +1,18 @@
 {% extends 'base.html' %}
-
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title><title>{% block title %}All Watches{% endblock %}</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'watches/css/styles.css' %}"/>
 </head>
 <body>
     {% block content %}
 
     <h1>All Watches</h1>
     <h3>Total number of watches: {{ total_count }}</h3>
+    <p><a class="button" href="{% url 'watches:create-watch' %}">Create watch</a></p>
     {% if watch_list %}
     <table class="content-table">
         <thead>
@@ -32,6 +34,24 @@
     {% else %}
     <p>There are no watches.</p>
     {% endif %}
+
+    <div class="pagination">
+    <span class="step-links">
+        {% if page_obj.has_previous %}
+            <a href="?page=1">&laquo; first</a>
+            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+        {% endif %}
+
+        <span class="current">
+            Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
+        </span>
+
+        {% if page_obj.has_next %}
+            <a href="?page={{ page_obj.next_page_number }}">next</a>
+            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+        {% endif %}
+        </span>
+    </div>
 
     {% endblock %}
 </body>
