Changed navbar style to back

--- a/watches/templates/base.html
+++ b/watches/templates/base.html
@@ -9,12 +9,12 @@
 <body>
     <div class="container">
         <div class="sidebar">
-            <ul class="index-list">
-                <li><a class="index-button" href="{% url 'watches:index' %}">Home</a></li>
-                <li><a class="index-button" href="{% url 'watches:designers' %}">All Designers</a></li>
-                <li><a class="index-button" href="{% url 'watches:brands' %}">All Brands</a></li>
-                <li><a class="index-button" href="{% url 'watches:watches' %}">All Watches</a></li>
-                <li><a class="index-button" href="{% url 'watches:stores' %}">All Stores</a></li>
+            <ul>
+                <li><a href="{% url 'watches:index' %}">Home</a></li>
+                <li><a href="{% url 'watches:designers' %}">All Designers</a></li>
+                <li><a href="{% url 'watches:brands' %}">All Brands</a></li>
+                <li><a href="{% url 'watches:watches' %}">All Watches</a></li>
+                <li><a href="{% url 'watches:stores' %}">All Stores</a></li>
             </ul>
 
         </div>
