--- a/watches/templates/watches/brand_list.html
+++ b/watches/templates/watches/brand_list.html
@@ -16,14 +16,14 @@
         <thead>
             <tr>
                 <th>Name</th>
-                <th>Country</th>
+                <th>Number of related designers</th>
             </tr>
         </thead>
         <tbody>
             {% for brand in page_obj %}
                 <tr>
                     <td><a href="{% url 'watches:brand-detail' brand.pk %}">{{ brand.name }}</a></td>
-                    <td>{{ brand.country }}</td>
+                    <td>{{ brand.designer_count }}</td>
                 </tr>
             {% endfor %}
         </tbody>
